--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: Test
-'on':
+"on":
   push:
     branches:
       - main
@@ -7,22 +7,18 @@ name: Test
     types:
       - opened
       - synchronize
-
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v2
-
       - name: ⎔ Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: lts/*
           cache: npm
-
       - name: 📥 Install dependencies
         run: npm ci
-
       - name: ▶️ Run tests
         run: npm run test:coverage
